--- a/LECTURE7.html
+++ b/LECTURE7.html
@@ -846,7 +846,7 @@ TMat[1,3] &lt;- 0.85*4     # adult fecundity term</code></pre>
 <p>If we keep going, we get the following matrix. See if you can
 understand what this matrix is saying about the transitions from and two
 the three life stages.</p>
-<pre class="r"><code># and keep filling it in...
+<pre class="r"><code># alternatively, you can fill in the matrix like this:
 
 TMat[,1] &lt;- c(0,0.3,0)              # fill in the entire first column of the transition matrix
 TMat[,2] &lt;- c(0.1*4,0.4,0.1)        # fill in the entire second column of the transition matrix
@@ -953,8 +953,8 @@ href="PVA3_421.html">here</a>.</p>
 <p>Next, download the Excel document for this example <a
 href="Loggerhead2022.xlsx">here</a>. We will work through the Excel
 example in class.</p>
-<p>NOTE: a worked version of the spreadsheet can be found
-[Loggerhead2022_worked.xlsx]</p>
+<p>NOTE: a worked version of the spreadsheet can be found here<a
+href="Loggerhead2022_worked.xlsx"></a></p>
 <p>Using your Excel spreadsheet, investigate four management scenarios
 for the loggerhead turtle population:</p>
 <ol style="list-style-type: decimal">
