--- a/LAB5.html
+++ b/LAB5.html
@@ -647,7 +647,7 @@ distribution</em> to represent our uncertainty about the birth rate
 parameter.</p>
 <p>In InsightMaker, change the “Birth rate” parameter <span
 class="math inline">\(b\)</span> (previously set at 0.2) to instead draw
-from a <strong>uniformly distribution</strong> with minimum of 0.15 and
+from a <strong>uniform distribution</strong> with minimum of 0.15 and
 maximum of 0.25 (so that the random number generator always produces
 values within this range).</p>
 <p>We can do this in InsightMaker in one of two distinct ways: one way
@@ -690,7 +690,7 @@ abundance will be after 30 years</em>.</p>
 <p>1g. If you were a wildlife manager tasked with predicting the
 abundance of this population 30 years into the future, which of the two
 methods (method #1 or #2) would be most appropriate for answering this
-question. That is, which of the two plots you produced (question 1c for
+question? That is, which of the two plots you produced (question 1c for
 method #1 or 1d for method #2) is a better representation of our
 uncertainty about the final population size at year 30? Explain your
 reasoning. [Hint: try to compare each of the plots from 1c and 1d with
