--- a/LAB5.html
+++ b/LAB5.html
@@ -12,7 +12,7 @@
 <meta name="author" content="NRES 470/670" />
 
 
-<title>Lab 5: Intro to stochastic models</title>
+<title>Lab 5: Stochasiticity and Uncertainty</title>
 
 <script src="site_libs/header-attrs-2.14/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -454,7 +454,7 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Lab 5: Intro to stochastic models</h1>
+<h1 class="title toc-ignore">Lab 5: Stochasiticity and Uncertainty</h1>
 <h4 class="author">NRES 470/670</h4>
 <h4 class="date">Spring 2023</h4>
 
