--- a/LECTURE8.html
+++ b/LECTURE8.html
@@ -775,7 +775,7 @@ hist(hatch_perfem)</code></pre>
 <p><strong>Q</strong>: What type of uncertainty does this set of values
 most likely represent? What random number generator might you use to
 represent this uncertainty? [PointSolutions]</p>
-<p>Now let’s try to fit a distribution to these data! Let’s use a normal
+<p>Now let’s try to fit a distribution to these data! Let’s use a Normal
 distribution. (NOTE: technically speaking we might want to use a
 distribution that can’t produce negative numbers- like the log-normal
 distribution, but we will usually use the normal distribution in this
