--- a/schedule.html
+++ b/schedule.html
@@ -385,13 +385,13 @@ $(document).ready(function () {
 
 
 <p>Please check for updates frequently!</p>
-<table>
+<table style="width:100%;">
 <colgroup>
-<col width="3%" />
+<col width="8%" />
 <col width="4%" />
-<col width="49%" />
-<col width="21%" />
+<col width="47%" />
 <col width="20%" />
+<col width="19%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -616,15 +616,15 @@ meetings (or make alternate arrangements for a group meeting time)</td>
 <tr class="even">
 <td align="left">Week 10</td>
 <td align="left">3/27/2023</td>
-<td align="left">LECTURE: <a href="LECTURE9.html">Small population
-paradigm</a></td>
-<td align="left"><a href="caughley1.pdf">Caughley 1994</a></td>
+<td align="left">LECTURE: <a href="LECTURE8.html">Stochasticity and
+uncertainty</a></td>
+<td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
 <td align="left">3/29/2023</td>
-<td align="left">LECTURE: <a href="LECTURE11.html">Declining population
+<td align="left">LECTURE: <a href="LECTURE9.html">Small population
 paradigm</a></td>
 <td align="left"><a href="caughley1.pdf">Caughley 1994</a></td>
 <td align="left"></td>
@@ -632,18 +632,17 @@ paradigm</a></td>
 <tr class="even">
 <td align="left"></td>
 <td align="left">3/31/2023</td>
-<td align="left">Work on final projects (PVA models due apr 6) (lab 5
-due)</td>
+<td align="left">Work on <a href="LECTURE12.html">final projects</a>
+(PVA models due Apr 12)</td>
 <td align="left"></td>
-<td align="left"></td>
+<td align="left">Lab 5</td>
 </tr>
 <tr class="odd">
 <td align="left">Week 11</td>
 <td align="left">4/3/2023</td>
-<td align="left">LECTURE: <a href="LECTURE12.html">Population Viability
-Analysis</a></td>
-<td align="left"><a href="beissinger1.pdf">Beissinger and Westphal
-1998</a></td>
+<td align="left">LECTURE: <a href="LECTURE11.html">Declining population
+paradigm</a></td>
+<td align="left"><a href="caughley1.pdf">Caughley 1994</a></td>
 <td align="left"></td>
 </tr>
 <tr class="even">
@@ -781,6 +780,21 @@ predator-prey</a></td>
 <td align="left">FINAL PAPERS DUE (last day of finals)</td>
 <td align="left"></td>
 <td align="left">Final PVA write-up</td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="odd">
+<td align="left">Additional lectures</td>
+<td align="left"></td>
+<td align="left">LECTURE:</td>
+<td align="left"><a href="beissinger1.pdf">Beissinger and Westphal
+1998</a></td>
+<td align="left"></td>
 </tr>
 </tbody>
 </table>
