--- a/LECTURE8.html
+++ b/LECTURE8.html
@@ -602,17 +602,17 @@ of environmental conditions.</p></li>
 </div>
 <div id="random-number-generation" class="section level2">
 <h2>Random number generation</h2>
-<p>To incorporate uncertainty and randomness into our models, we often
-include <em>stochastic</em> components so that each model run
-(replicate) – or each year of each model run – is different from one
-another (the results are variable). That is, we need to include at least
-one <strong>random number generator</strong> in our models! A random
-number generator is like a lottery ball machine! Each time we want a new
-number we reach in and pull another number out, record the number, put
-it back in and shake it up again.</p>
+<p>To incorporate inherent unpredictability (randomness) into our
+models, we often include <em>stochastic</em> components so that each
+model run (replicate) – or each year of each model run – is different
+from one another (the results are variable). That is, we need to include
+at least one <strong>random number generator</strong> in our models! A
+random number generator is like a lottery ball machine! Each time we
+want a new number we reach in and pull another number out, record the
+number, put it back in and shake it up again.</p>
 <p><img src="lottery1.png" style="width:20.0%" /></p>
 <p>Every random-number generator has a <strong>distribution</strong>.
-This is a way of defining what exactly is in the box. This can be
+This is a way of defining what exactly is ‘in the box’. This can be
 visualized as a boxplot or histogram, with the unique possible values
 represented on the X axis and the probabilities associated with each
 unique value represented on the Y axis.</p>
