--- a/LECTURE8.html
+++ b/LECTURE8.html
@@ -729,7 +729,6 @@ parameters to suit your needs. Here are some examples (drawing 1 random
 number at a time):</p>
 <pre class="r"><code># Random number generation!   ------------------------
 
-
 ### Binomial random number generator
 rbinom(1,size=10,prob=0.5)    # note: &quot;size&quot; is the number of coin flips, and &quot;prob&quot; is the probability of coming up &#39;heads&#39;
 
@@ -744,11 +743,10 @@ rnorm(1,mean=3,sd=4.1)   # normal distribution is defined by &quot;mean&quot; an
 <p><strong>PointSolutions</strong> In R, generate one random number from
 a Binomial distribution with 10 trials and probability of success equal
 to 0.3</p>
-<p><strong>PointSolutions</strong> In R, generate one random number from
-a Poisson distribution with mean of 2.1</p>
-<p><strong>PointSolutions</strong> In R, generate one random number from
-a Normal distribution with mean of 1.75 and standard deviation of
-0.9</p>
+<p>In R, generate random numbers from a Poisson distribution with mean
+of 2.1</p>
+<p>In R, generate random numbers from a Normal distribution with mean of
+1.75 and standard deviation of 0.9</p>
 <p>Try to modify one of the other parameters and generate 100 random
 numbers? To visualize the distribution you can use the “hist()” function
 to produce a histogram of the random distribution you just
