--- a/LECTURE9.html
+++ b/LECTURE9.html
@@ -521,6 +521,9 @@ population and the red variants go extinct. <em>There is no natural
 selection involved in this scenario – just stochasticity!</em></p>
 <p>And now, by random chance, this population is now more susceptible to
 drought than it was before!</p>
+<p>In a much larger population, the possibility of losing this
+drought-resistance allele from the gene pool due to random genetic drift
+would be vanishingly small.</p>
 </div>
 <div id="inbreeding-depression" class="section level3">
 <h3>Inbreeding depression</h3>
@@ -535,14 +538,18 @@ bad effect is only apparent if an individual has <em>two “bad” copies of
 that allele</em>! If these alleles are rare in the population, it is
 extremely unlikely that you get two copies of the same bad allele by
 chance!</p>
-<p>Unless…your two parents are close relatives (which can be more common
-in small populations). If your parents are close relatives, both of them
-have a relatively high probability of inheriting at least one of the
-same ‘bad’ gene variants from a single common ancestor!</p>
+<p>Unless… the two parents are close relatives (which can be more common
+in small populations). If parents are close relatives, both parents have
+a relatively high probability of inheriting at least one of the same
+‘bad’ gene variants from a single common ancestor!</p>
+<p>If you consider that that single common ancestor likely had
+<em>lots</em> of deleterious recessive alleles embedded in their genome,
+then the chance of an inbred offspring inheriting two copies of that
+allele for at least one of those loci becomes fairly high!</p>
 </div>
 <div id="extinction-vortex" class="section level2">
 <h2>Extinction vortex</h2>
-<p><img src="vortex1.jpg" /></p>
+<p><img src="vortex1.jpg" style="width:50.0%" /></p>
 <p>One of the important ideas emerging from the small population
 paradigm is the concept of the <strong>extinction vortex</strong>. This
 concept is illustrated in the above figure.</p>
@@ -552,6 +559,14 @@ stochasticity, leading to inbreeding and random loss of useful genes,
 leading to reduced vital rates, leading to smaller population sizes,
 leading to further genetic degradation, leading to greater influence of
 demographic stochasticity, leading ultimately to extinction…</p>
+<p>Furthermore, once a population falls into the extinction vortex, it
+can’t necessarily be saved by removing the factors that caused the
+population to become small in the first place. That is, once genetic
+drift has removed important adaptive variation from the gene pool, and
+once inbreeding has caused deleterious recessive alleles to start
+expressing more frequently, the population may not be able to be
+recovered effectively.</p>
+<p>Case study: florida panther genetic rescue.</p>
 <p>In general, extinction is often caused by stochastic processes, but
 stochastic factors are unlikely to be the reason the population got
 small in the first place! (that is the topic of the ‘declining
