--- a/PVA1_421.html
+++ b/PVA1_421.html
@@ -461,6 +461,13 @@ div.tocify {
 </div>
 
 
+<p><a
+href="https://insightmaker.com/insight/hoWpE5JlD9x5AaPHujVg4/Red-Knot-Matrix-Model">Red
+Knot model</a></p>
+<p><a
+href="https://insightmaker.com/insight/gim35Z9XDbmFy7gcQy2JD/Horseshoe-crab-model">Horseshoe
+Crab model</a></p>
+<p><a href="REKN.html">Key PPT slides for exercises</a></p>
 <div id="population-viability-analysis-pva" class="section level2">
 <h2>Population Viability Analysis (PVA)</h2>
 <p>In this short course, we will explore the use of <strong>population
@@ -729,6 +736,13 @@ initialize the population with 10 individuals vs 500 individuals??</p>
 <div id="case-study-red-knots-and-horseshoe-crabs"
 class="section level2">
 <h2>Case study: Red Knots and Horseshoe Crabs</h2>
+<p><a
+href="https://insightmaker.com/insight/hoWpE5JlD9x5AaPHujVg4/Red-Knot-Matrix-Model">Red
+Knot model</a></p>
+<p><a
+href="https://insightmaker.com/insight/gim35Z9XDbmFy7gcQy2JD/Horseshoe-crab-model">Horseshoe
+Crab model</a></p>
+<p><a href="REKN.html">Key PPT slides for exercises</a></p>
 </div>
 <div id="and-finally-some-optional-extra-materials"
 class="section level2">
