--- a/PVA1_421.html
+++ b/PVA1_421.html
@@ -467,7 +467,7 @@ Knot model</a></p>
 <p><a
 href="https://insightmaker.com/insight/gim35Z9XDbmFy7gcQy2JD/Horseshoe-crab-model">Horseshoe
 Crab model</a></p>
-<p><a href="REKN.html">Key PPT slides for exercises</a></p>
+<p><a href="REKN.pptx">Key PPT slides for exercises</a></p>
 <div id="population-viability-analysis-pva" class="section level2">
 <h2>Population Viability Analysis (PVA)</h2>
 <p>In this short course, we will explore the use of <strong>population
